--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My First Github Repo</title>
 </head>
 <body>
-    
+    <h1>coding is funny</h1>
+    <h2>i can use github</h2>
+    <h3>happy coding</h3>
 </body>
 </html>
